# MrKrabs

./: Cargo.toml  README.md
src/: cli.rs  constants.rs  main.rs  quotes.rs  scraper.rs  structs.rs
